fixed unnecessary scrollbars for code examples on windows

--- a/docs/_themes/hyrise/static/pygments-github.css
+++ b/docs/_themes/hyrise/static/pygments-github.css
@@ -11,7 +11,7 @@ table.highlighttable {
   position: relative;
   border: 1px solid silver;
   border-radius: 3px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .linenodiv {
